# cleanscout

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cleanscout/: __init__.py  clean.py  eda.py  report.py
tests/: test_smoke.py
